@@ -1,3 +1,8 @@
+2013-02-06         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* builtin.c (printf_common): Move nargs > 0 check into assert.
+	(do_sprintf): Add nargs check and fatal message to here.
+
 2013-01-31         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* regcomp.c, regex.c, regex_internal.c, regexec.c: Update
